--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@next/font": "^13.5.4",
     "@next/mdx": "^13.5.4",
     "@upstash/redis": "^1.23.3",
+    "@vercel/blob": "^0.27.0",
+    "cloudinary": "^2.5.1",
     "contentlayer": "^0.3.4",
+    "firebase": "^11.1.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "markdown-wasm": "^1.2.0",
     "material": "^0.9.16",
     "next": "^13.5.4",
+    "next-cloudinary": "^6.16.0",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
